{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 771,
  "lineage": "36890b15-75ef-168e-4510-34a4ca1d80aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-0600df5b7cab2905c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0600df5b7cab2905c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ymontagnier-tp04-ex02-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cef2dfdab67aa20d",
            "private_dns": "ip-10-0-1-137.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_ip": "13.48.106.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ymontagnier-tp04-ex02",
                  "Owner": "ymontagnier"
                },
                "tags_all": {
                  "Name": "ymontagnier-tp04-ex02",
                  "Owner": "ymontagnier"
                },
                "throughput": 125,
                "volume_id": "vol-0b5afd65fe04370e9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a10b9ef1116b38e5",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-bastion"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-bastion",
              "Owner": "ymontagnier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041d7bd9cb68b0341"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-00d7a7a88db3c6e68",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d7a7a88db3c6e68",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ymontagnier-tp04-ex02-nextcloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b5baaf27ef03c5ee",
            "private_dns": "ip-10-0-4-21.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ymontagnier-tp04-ex02",
                  "Owner": "ymontagnier"
                },
                "tags_all": {
                  "Name": "ymontagnier-tp04-ex02",
                  "Owner": "ymontagnier"
                },
                "throughput": 125,
                "volume_id": "vol-09657e9bfe1dca683",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6bc2b889164069f",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-nextcloud"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-nextcloud",
              "Owner": "ymontagnier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-006ab3de0830ebd5a"
            ]
          },
          "dependencies": [
            "aws_security_group.nextcloud_sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:internet-gateway/igw-047d42aad99d30059",
            "id": "igw-047d42aad99d30059",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-igw"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-igw",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:network-acl/acl-075b74c83abe99975",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-075b74c83abe99975",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "13.48.4.200/30",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "134400125759",
            "subnet_ids": [
              "subnet-0591e6386ec73e1ae",
              "subnet-082e8a5b686d6c663",
              "subnet-084e07af53a1ba010",
              "subnet-0909c5bded2387b56",
              "subnet-0a10b9ef1116b38e5",
              "subnet-0f6bc2b889164069f"
            ],
            "tags": {
              "Name": "ymontagnier-tp04-ex02-acl"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-acl",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00f1ecbe9cde341c9",
            "network_acl_id": "acl-075b74c83abe99975",
            "subnet_id": "subnet-0f6bc2b889164069f"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0904e0eed4bb0a4ca",
            "network_acl_id": "acl-075b74c83abe99975",
            "subnet_id": "subnet-0909c5bded2387b56"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fce5df8dc17f2928",
            "network_acl_id": "acl-075b74c83abe99975",
            "subnet_id": "subnet-0591e6386ec73e1ae"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fa58110c120efb7d",
            "network_acl_id": "acl-075b74c83abe99975",
            "subnet_id": "subnet-0a10b9ef1116b38e5"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f638bb4fa7e91f10",
            "network_acl_id": "acl-075b74c83abe99975",
            "subnet_id": "subnet-082e8a5b686d6c663"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09e07856b37aaca9f",
            "network_acl_id": "acl-075b74c83abe99975",
            "subnet_id": "subnet-084e07af53a1ba010"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0b56aa155653ecc67",
            "id": "rtb-0b56aa155653ecc67",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ymontagnier-tp04-ex02-private-rtb-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-private-rtb-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0333dda1a4fe68b45",
            "id": "rtb-0333dda1a4fe68b45",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ymontagnier-tp04-ex02-private-rtb-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-private-rtb-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-00534892be8b6c864",
            "id": "rtb-00534892be8b6c864",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ymontagnier-tp04-ex02-private-rtb-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-private-rtb-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-02e654bcfc571e6a9",
            "id": "rtb-02e654bcfc571e6a9",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047d42aad99d30059",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp04-ex02-public-rtb"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-public-rtb",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0644acc7dd1b12198",
            "route_table_id": "rtb-0b56aa155653ecc67",
            "subnet_id": "subnet-0f6bc2b889164069f"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec0534ba61bc4e0e",
            "route_table_id": "rtb-0333dda1a4fe68b45",
            "subnet_id": "subnet-0909c5bded2387b56"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9be2db43f6f305b",
            "route_table_id": "rtb-00534892be8b6c864",
            "subnet_id": "subnet-0591e6386ec73e1ae"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df73194578bda49d",
            "route_table_id": "rtb-02e654bcfc571e6a9",
            "subnet_id": "subnet-0a10b9ef1116b38e5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c1c640269031093",
            "route_table_id": "rtb-02e654bcfc571e6a9",
            "subnet_id": "subnet-082e8a5b686d6c663"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d3e1427eb103395",
            "route_table_id": "rtb-02e654bcfc571e6a9",
            "subnet_id": "subnet-084e07af53a1ba010"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-041d7bd9cb68b0341",
            "description": "Allow SSH inbound traffic from ynov and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041d7bd9cb68b0341",
            "ingress": [
              {
                "cidr_blocks": [
                  "15.236.39.200/32",
                  "13.38.15.170/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ymontagnier-tp04-ex02-bastion-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp04-ex02-bastion-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-bastion-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-006ab3de0830ebd5a",
            "description": "Allow SSH inbound traffic from bastion and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006ab3de0830ebd5a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041d7bd9cb68b0341"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ymontagnier-tp04-ex02-nextcloud-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp04-ex02-nextcloud-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-nextcloud-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0f6bc2b889164069f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6bc2b889164069f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-private-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0909c5bded2387b56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0909c5bded2387b56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-private-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0591e6386ec73e1ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0591e6386ec73e1ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-private-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-private-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0a10b9ef1116b38e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a10b9ef1116b38e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-public-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-public-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-082e8a5b686d6c663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082e8a5b686d6c663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-public-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-public-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-084e07af53a1ba010",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084e07af53a1ba010",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-public-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-public-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0922cd87992afb2fe"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:vpc/vpc-0922cd87992afb2fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d330cf4dc9c71a0c",
            "default_route_table_id": "rtb-02f7046f4a7d5dc25",
            "default_security_group_id": "sg-085b405302c8a48c4",
            "dhcp_options_id": "dopt-84fa2ded",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0922cd87992afb2fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f7046f4a7d5dc25",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-tp04-ex02-vpc"
            },
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02-vpc",
              "Owner": "ymontagnier"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0cdb8372568f23eb1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cdb8372568f23eb1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-041d7bd9cb68b0341",
            "security_group_rule_id": "sgr-0cdb8372568f23eb1",
            "tags": null,
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-071871403b2d9f22e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-071871403b2d9f22e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-006ab3de0830ebd5a",
            "security_group_rule_id": "sgr-071871403b2d9f22e",
            "tags": null,
            "tags_all": {
              "Name": "ymontagnier-tp04-ex02",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0a5b0d0193f37dbc8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a5b0d0193f37dbc8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-041d7bd9cb68b0341",
            "security_group_id": "sg-006ab3de0830ebd5a",
            "security_group_rule_id": "sgr-0a5b0d0193f37dbc8",
            "tags": {
              "Name": "Allow SSH from Bastion"
            },
            "tags_all": {
              "Name": "Allow SSH from Bastion",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_cloud9_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-091db08bffec0315d",
            "cidr_ipv4": "15.236.39.200/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-091db08bffec0315d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-041d7bd9cb68b0341",
            "security_group_rule_id": "sgr-091db08bffec0315d",
            "tags": {
              "Name": "Allow SSH from Cloud9"
            },
            "tags_all": {
              "Name": "Allow SSH from Cloud9",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_ynov_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-01892a0e1c4b174ba",
            "cidr_ipv4": "13.38.15.170/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01892a0e1c4b174ba",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-041d7bd9cb68b0341",
            "security_group_rule_id": "sgr-01892a0e1c4b174ba",
            "tags": {
              "Name": "Allow SSH from YNOV"
            },
            "tags_all": {
              "Name": "Allow SSH from YNOV",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}